@@ -1,4 +1,3 @@
-/buildroot-config
 /conf
 /mconf
 /qconf
