@@ -102,6 +102,7 @@ void menu_set_type(int type);
 /* util.c */
 struct file *file_lookup(const char *name);
 int file_write_dep(const char *name);
+int write_make_deps(const char *name);
 
 struct gstr {
 	size_t len;
